name:                thebutton
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Romain Ruetschi
maintainer:          romain.ruetschi@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Reddit.TheButton
                     , Reddit.TheButton.Types
                     , Reddit.TheButton.Connection
                     , Reddit.TheButton.Utility
                     , Reddit.TheButton.AnyBar
  build-depends:       base >=4.8 && <4.9
                     , websockets >=0.9
                     , wuss >=1.0
                     , aeson >=0.8
                     , mtl >=2.1
                     , network >=2.6
                     , text >=1.2
                     , process >=1.2
                     , time >=1.5
                     , bytestring >=0.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -O2
                     -threaded
                     -- -fprof-auto
                     -- "-with-rtsopts=-N -p -s -h -i0.001"

executable thebutton
  main-is:             Main.hs
  other-modules:       Reddit.TheButton
                     , Reddit.TheButton.Types
                     , Reddit.TheButton.Connection
                     , Reddit.TheButton.Utility
                     , Reddit.TheButton.AnyBar
  build-depends:       base >=4.8 && <4.9
                     , websockets >=0.9
                     , wuss >=1.0
                     , aeson >=0.8
                     , mtl >=2.1
                     , network >=2.6
                     , text >=1.2
                     , process >=1.2
                     , time >=1.5
                     , bytestring >=0.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -O2
                     -threaded
                     -- -fprof-auto
                     -- "-with-rtsopts=-N -p -s -h -i0.001"
